# PyImageCropper

./: .gitignore  myproject.toml  requirements.txt  setup.cfg
src/PyImageCropper/: PyImgCropper.cpp  PyImgCropper.pyx  setup.py  test.py
src/PyImageCropper/lib/: PyImgCropper.pxd  openCVModuls.pxd
tests/: test.py
