[metadata]
name = PyImageCropper
description = Walk through a given directory collecting all file names, if images, it opens udn crops them
author = Cristian Rodrigo Guarachi Ibanez
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    PyImageCropper
install_requires =
    Cython==0.29.32
    numpy==1.23.4
    opencv-python==4.6.0.66
    h5py==3.7.0
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
PyImageCropper = py.typed

[flake8]
max-line-length = 160